--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,5 +1,5 @@
 <section class="intro">
   <div class="container">
-    <p class="lead">Hi, I'm John Doe. I do stuffs with computer and sometimes write about it here. I'm from Penang, MY and I ship code at <a href="#">Microsoft</a>.</p>
+    <p class="lead">Hi.. This webpage consists of planning algorithms and homeworks from RI16-735 Robot Motion Planning and RI16-350 Planning Techniques</a>.</p>
   </div>
 </section>
