--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@ published: true
     <main class="wrapper">
       {% include header.html %}
       {{ content }}
+      {% include comments.html %}
       {% include footer.html %}
     </main>
     {% include foot.html %}
