--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,5 +1,5 @@
 <section class="intro">
   <div class="container">
-    <p class="lead">Hi... This page gives a brief idea about different planning techniques in Robotics and implementation of which is also shown.</p>
+    <p class="lead">Hi... This page gives a brief idea about different planning techniques in Robotics and implementation of which is also shown.(Post 1-7 available)</p>
   </div>
 </section>
