--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,5 +1,5 @@
 <section class="intro">
   <div class="container">
-    <p class="lead">Hi... This page gives a brief idea about different planning techniques in Robotics and implementation of which is also shown.(Post 1-8 available)</p>
+    <p class="lead">Greetings! This page gives a brief idea about different planning techniques in Robotics and implementation of which is also shown. The posts are gradually developed and are inter-connected to each other. Series1: Post 1 to 4 Series2: Post 5 to 9</p>
   </div>
 </section>
