--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,6 +1,8 @@
 <section class="intro">
   <div class="container">
     <p class="lead">Greetings! ❤️ </p> <p> This page gives a brief idea about different planning techniques in Robotics and implementation of which is also shown. The posts are gradually developed and are inter-connected to each other.<br> Post 1,3-9 available</p>
-    <img src="{{ site.url }}/assets/gifs/intro.gif" alt="alternatetext"> 
+    <p align="center">
+      <img src="{{ site.url }}/assets/gifs/intro.gif" alt="alternatetext">
+    </p>
   </div>
 </section>
