--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -2,7 +2,8 @@
   <div class="container">
     <p class="lead">Greetings! </p> <p> This page gives a brief idea about different planning techniques in Robotics and implementation of which is also shown. The posts are gradually developed and are inter-connected to each other.<br> Post 1,3-9 available</p>
     <p align="center">
-      <img src="{{ site.url }}/assets/gifs/intro3.gif" alt="alternatetext">
+      <img src="{{ site.url }}/assets/gifs/intro3.gif" alt="alternatetext"><br>
+      <a href="https://dv367.github.io/thinkspace/2020/catch/">Jump to this post</a>
     </p>
   </div>
 </section>
