--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,6 +1,6 @@
 <section class="intro">
   <div class="container">
-    <p class="lead">Greetings! </p> <p> This page gives a brief idea about different planning techniques in Robotics and implementation of which is also shown. The posts are gradually developed and are inter-connected to each other.<br> Post 1,3-10 available. Find codes here 
+    <p class="lead">Greetings! </p> <p> This page gives a brief idea about different planning techniques in Robotics and implementation of which is also shown. The posts are gradually developed and are inter-connected to each other.<br> Post 1,3-10 available. 
 Find codes <a href="https://github.com/dv367/planning-cmu/tree/master/my_robot/src/scripts"> here</a> </p>
     <p align="center">
       <img src="{{ site.url }}/assets/gifs/intro5.gif" alt="alternatetext"><br>
