--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,8 +1,8 @@
 // Typography
 //@import url('https://fonts.googleapis.com/css?family=Overpass+Mono:400,700');
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap');
-
-$base-font-family: 'Overpass Mono', monospace;
+$base-font-family: 'Raleway', sans-serif;
+//$base-font-family: 'Overpass Mono', monospace;
 $heading-font-family: $base-font-family;
 
 // Font Sizes
