--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -55,7 +55,7 @@ hr {
 }
 
 .link {
-  color: $DarkSlateBlue-color;
+  color: $red-color;
   padding-bottom: .05em;
   border-bottom: 2px solid transparent;
 
