--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -4,7 +4,7 @@
 Find codes <a href="https://github.com/dv367/planning-cmu/tree/master/my_robot/src/scripts"> here</a> Next Topic: Lattice-Based Planners </p>
     <p align="center">
       <img src="{{ site.url }}/assets/gifs/intro5.gif" alt="alternatetext"><br>
-      <a href="https://dv367.github.io/thinkspace/2020/catch/">Jump to this post</a>
+      <a href="{{ site.url }}/vivek-uka/2020/catch/">Jump to this post</a>
     </p>
   </div>
 </section>
